--- a/index.html
+++ b/index.html
@@ -35,17 +35,27 @@
         @apply bg-white text-primary px-6 py-3 rounded-lg font-medium hover:bg-gray-100 transition-colors;
       }
       .mobile-menu {
-        @apply md:hidden fixed inset-0 bg-white z-50 transform transition-transform duration-300 ease-in-out;
+        @apply md:hidden fixed inset-0 bg-white z-50;
         transform: translateX(-100%);
-        visibility: hidden;
+        transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         opacity: 0;
-        display: none;
+        visibility: hidden;
       }
       .mobile-menu.active {
         transform: translateX(0);
-        visibility: visible;
         opacity: 1;
-        display: block;
+        visibility: visible;
+        box-shadow: 4px 0 15px rgba(0, 0, 0, 0.1);
+      }
+      .mobile-menu nav a {
+        transform: translateX(-10px);
+        opacity: 0;
+        transition: all 0.3s ease;
+        transition-delay: calc(0.1s * var(--link-index, 0));
+      }
+      .mobile-menu.active nav a {
+        transform: translateX(0);
+        opacity: 1;
       }
 
       .hamburger-simple {
@@ -145,6 +155,26 @@
           </button>
         </div>
       </div>
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="mobile-menu">
+      <div class="flex justify-between items-center border-b">
+        <button id="close-menu" class="hamburger-simple">
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+        </button>
+      </div>
+      <nav class="p-4">
+        <div class="flex flex-col space-y-4">
+          <a href="/" class="nav-link text-lg font-medium">Beranda</a>
+          <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
+          <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
+          <a href="/berita.html" class="nav-link text-lg">Berita</a>
+          <a href="/pengaduan.html" class="nav-link text-lg">Pengaduan</a>
+          <a href="/kontak.html" class="nav-link text-lg">Kontak</a>
+        </div>
+      </nav>
+    </div>
     </header>
 
 
