--- a/index.html
+++ b/index.html
@@ -157,15 +157,8 @@
       </div>
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="mobile-menu">
-      <div class="p-4 flex justify-between items-center border-b">
+      <div class="flex justify-between items-center border-b">
         <div class="flex items-center">
-          <div class="bg-primary text-white w-10 h-10 rounded-lg flex items-center justify-center">
-            <i class="fas fa-file-contract text-xl"></i>
-          </div>
-          <div class="ml-3">
-            <h1 class="text-xl font-bold text-primary">Izin.In</h1>
-            <p class="text-xs text-gray-600">Solusi Perizinan UMKM</p>
-          </div>
         </div>
         <button id="close-menu" class="hamburger-simple">
           <span class="hamburger-line"></span>
