--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Izin.In - Solusi per Perizinan UMKM</title>
+    <title>Izin.In - Solusi Perizinan UMKM</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -139,7 +139,7 @@
           </div>
 
           <nav class="hidden md:flex space-x-6">
-            <a href="/" class="nav-link font-medium">Beranda</a>
+            <a href="/" class="nav-link font-medium">Rumah</a>
             <a href="/tentang.html" class="nav-link">Tentang</a>
             <a href="/layanan.html" class="nav-link">Layanan</a>
             <a href="/berita.html" class="nav-link">Berita</a>
