--- a/kontak.html
+++ b/kontak.html
@@ -149,7 +149,7 @@
                         <h3 class="text-xl font-semibold mb-4">Lokasi Kami</h3>
                         <div class="aspect-w-16 aspect-h-9">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.6664672435166!2d106.82796231476884!3d-6.175392395527964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d2e764b12d%3A0x3d2ad6e1e0e9bcc8!2sMonumen%20Nasional!5e0!3m2!1sid!2sid!4v1628751314973!5m2!1sid!2sid"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.510857085357!2d111.12562281152886!3d-7.628077892355805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798b74e967fcc7%3A0xfd95abd1ddf99dbc!2sSMP%20%26%20SMK%20IDN%20Boarding%20School%20Solo!5e0!3m2!1sen!2sid!4v1754619540988!5m2!1sen!2sid"
                                 width="100%"
                                 height="450"
                                 style="border:0;"
