--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <body class="bg-gray-100 font-sans">
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-40">
-      <div class="container px-2 md:px-4 py-2 md:py-3">
+      <div class="container mx-auto px-2 md:px-4 py-2 md:py-3">
         <div class="flex items-center justify-between">
           <div class="flex items-center">
             <div class="bg-primary text-white w-8 h-8 md:w-10 md:h-10 rounded-lg flex items-center justify-center">
@@ -142,7 +142,6 @@
             </div>
           </div>
 
-<<<<<<< HEAD
           <nav class="hidden md:flex space-x-4 lg:space-x-6">
             <a href="/" class="nav-link font-medium text-sm lg:text-base">Beranda</a>
             <a href="/tentang.html" class="nav-link text-sm lg:text-base">Tentang</a>
@@ -150,15 +149,6 @@
             <a href="/berita.html" class="nav-link text-sm lg:text-base">Berita</a>
             <a href="/pengaduan.html" class="nav-link text-sm lg:text-base">Pengaduan</a>
             <a href="/kontak.html" class="nav-link text-sm lg:text-base">Kontak</a>
-=======
-          <nav class="hidden md:flex space-x-6">
-            <a href="/" class="nav-link font-medium">Rumah</a>
-            <a href="/tentang.html" class="nav-link">Tentang</a>
-            <a href="/layanan.html" class="nav-link">Layanan</a>
-            <a href="/berita.html" class="nav-link">Berita</a>
-            <a href="/pengaduan.html" class="nav-link">Pengaduan</a>
-            <a href="/kontak.html" class="nav-link">Kontak</a>
->>>>>>> ce36df19094cd1f7ea386364b99870d2296b2bc2
           </nav>
 
           <!-- Mobile menu button -->
