--- a/index.html
+++ b/index.html
@@ -160,18 +160,18 @@
         </div>
       </div>
     <!-- Mobile Menu -->
-    <div id="mobile-menu" class="mobile-menu">
+    <div id="mobile-menu" class="mobile-menu md:hidden">
       <div class="flex justify-between items-center border-b">
         <div class="flex items-center">
         </div>
-        <button id="close-menu" class="hamburger-simple">
+        <button id="close-menu" class="hamburger-simple md:hidden">
           <span class="hamburger-line"></span>
           <span class="hamburger-line"></span>
           <span class="hamburger-line"></span>
         </button>
       </div>
       <nav class="p-4">
-        <div class="flex flex-col space-y-4">
+        <div class="flex flex-col space-y-4 md:hidden">
           <a href="/" class="nav-link text-lg font-medium">Beranda</a>
           <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
           <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
