--- a/index.html
+++ b/index.html
@@ -155,30 +155,28 @@
           </button>
         </div>
       </div>
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="mobile-menu">
-      <div class="flex justify-between items-center border-b">
-        <div class="flex items-center">
+      <!-- Mobile Menu -->
+      <div id="mobile-menu" class="mobile-menu">
+        <div class="flex justify-between items-center border-b">
+          <div class="flex items-center"></div>
+          <button id="close-menu" class="hamburger-simple">
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+            <span class="hamburger-line"></span>
+          </button>
         </div>
-        <button id="close-menu" class="hamburger-simple">
-          <span class="hamburger-line"></span>
-          <span class="hamburger-line"></span>
-          <span class="hamburger-line"></span>
-        </button>
+        <nav class="p-4">
+          <div class="flex flex-col space-y-4">
+            <a href="/" class="nav-link text-lg font-medium">Beranda</a>
+            <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
+            <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
+            <a href="/berita.html" class="nav-link text-lg">Berita</a>
+            <a href="/pengaduan.html" class="nav-link text-lg">Pengaduan</a>
+            <a href="/kontak.html" class="nav-link text-lg">Kontak</a>
+          </div>
+        </nav>
       </div>
-      <nav class="p-4">
-        <div class="flex flex-col space-y-4">
-          <a href="/" class="nav-link text-lg font-medium">Beranda</a>
-          <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
-          <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
-          <a href="/berita.html" class="nav-link text-lg">Berita</a>
-          <a href="/pengaduan.html" class="nav-link text-lg">Pengaduan</a>
-          <a href="/kontak.html" class="nav-link text-lg">Kontak</a>
-        </div>
-      </nav>
-    </div>
     </header>
-
 
     <!-- Hero Section -->
     <section class="relative bg-gradient-to-r from-primary to-blue-800 text-white py-16 md:py-24">
