--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </head>
   <body class="bg-gray-100 font-sans">
     <!-- Header -->
-    <header class="bg-white shadow-md sticky top-0 z-40">
+    <header class="bg-white shadow-md auto top-0 z-40">
       <div class="container mx-auto px-2 md:px-4 py-2 md:py-3">
         <div class="flex items-center justify-between">
           <div class="flex items-center">
