--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </head>
   <body class="bg-gray-100 font-sans">
     <!-- Header -->
-    <header class="bg-white shadow-md auto top-0 z-40">
+    <header class="bg-white shadow-md sticky top-0 z-40">
       <div class="container mx-auto px-2 md:px-4 py-2 md:py-3">
         <div class="flex items-center justify-between">
           <div class="flex items-center">
@@ -160,18 +160,18 @@
         </div>
       </div>
     <!-- Mobile Menu -->
-    <div id="mobile-menu" class="mobile-menu">
+    <div id="mobile-menu" class="mobile-menu md:hidden">
       <div class="flex justify-between items-center border-b">
         <div class="flex items-center">
         </div>
-        <button id="close-menu" class="hamburger-simple">
+        <button id="close-menu" class="hamburger-simple md:hidden">
           <span class="hamburger-line"></span>
           <span class="hamburger-line"></span>
           <span class="hamburger-line"></span>
         </button>
       </div>
-      <nav class="p-4">
-        <div class="flex flex-col space-y-4">
+      <nav id="mobile-nav" hidden class="p-4">
+        <div class="flex flex-col space-y-4 md:hidden">
           <a href="/" class="nav-link text-lg font-medium">Beranda</a>
           <a href="/tentang.html" class="nav-link text-lg">Tentang</a>
           <a href="/layanan.html" class="nav-link text-lg">Layanan</a>
@@ -465,6 +465,38 @@
       </div>
     </footer>
 
+    <!-- Mobile menu (hanya muncul di mobile, dikontrol JS) -->
+    <div id="mobile-menu" class="mobile-menu p-6" aria-hidden="true" style="display: none;">
+        <div class="flex justify-between items-center mb-8">
+            <div class="flex items-center">
+                <div class="bg-primary text-white w-10 h-10 rounded-lg flex items-center justify-center">
+                    <i class="fas fa-file-contract text-lg"></i>
+                </div>
+                <div class="ml-3">
+                    <h1 class="text-lg font-bold text-primary">Izin.In</h1>
+                </div>
+            </div>
+            <button id="close-menu" class="text-gray-700">
+                <i class="fas fa-times text-2xl"></i>
+            </button>
+        </div>
+        <nav class="space-y-4">
+            <a href="/" class="block text-lg font-medium py-2 border-b border-gray-200">Beranda</a>
+            <a href="/tentang.html" class="block text-lg font-medium py-2 border-b border-gray-200">Tentang</a>
+            <a href="/layanan.html" class="block text-lg font-medium py-2 border-b border-gray-200">Layanan</a>
+            <a href="/berita.html" class="block text-lg font-medium py-2 border-b border-gray-200">Berita</a>
+            <a href="/pengaduan.html" class="block text-lg font-medium py-2 border-b border-gray-200">Pengaduan</a>
+            <a href="/kontak.html" class="block text-lg font-medium py-2">Kontak</a>
+        </nav>
+        <div class="mt-8 pt-6 border-t border-gray-200">
+            <div class="flex space-x-4">
+                <a href="#" class="text-primary"><i class="fab fa-facebook text-2xl"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-instagram text-2xl"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-twitter text-2xl"></i></a>
+                <a href="#" class="text-primary"><i class="fab fa-youtube text-2xl"></i></a>
+            </div>
+        </div>
+    </div>
     <!-- JavaScript for Mobile Menu -->
     <script src="js/navbar.js"></script>
   </body>
