--- a/pengaduan.html
+++ b/pengaduan.html
@@ -202,7 +202,7 @@
                     <h4 class="text-lg font-semibold mb-4">Kontak</h4>
                     <ul class="space-y-2 text-gray-300">
                         <li>Jl. Contoh No. 123</li>
-                        <li>Telp: (021) 1234567</li>
+                        <li>Telp: +62 8564-1783-101</li>
                         <li>Email: info@instansi.go.id</li>
                     </ul>
                 </div>
@@ -236,6 +236,7 @@
         </div>
     </footer>
 
+    <script src="/js/isiPengaduan.js"></script>
     <script src="/js/utils.js"></script>
     <script>
         // Initialize form
