--- a/tentang.html
+++ b/tentang.html
@@ -501,7 +501,7 @@
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-phone-alt mt-1 mr-3 text-accent"></i>
-                            <span>(021) 1234567</span>
+                            <span>+62 8564-1783-101</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
