--- a/terima-kasih.html
+++ b/terima-kasih.html
@@ -64,12 +64,12 @@
                         Jika Anda memerlukan bantuan segera, silakan hubungi kami di:
                     </p>
                     <p class="text-primary font-medium">
-                        (021) 1234567
+                        +62 8564-1783-101
                     </p>
                 </div>
 
                 <div class="mt-8">
-                    <a href="/" class="btn-primary inline-block px-8">
+                    <a href="pengaduan.html" class="btn-primary inline-block px-8">
                         Kembali ke Beranda
                     </a>
                 </div>
