--- a/tentang.html
+++ b/tentang.html
@@ -400,80 +400,79 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-secondary text-white pt-10 pb-6">
-      <div class="container mx-auto px-4 sm:px-6">
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
-          <div>
-            <div class="flex items-center mb-4">
-              <img src="/assets/logo.png" alt="Logo Instansi" class="h-10 mr-3" />
-              <h4 class="text-xl font-bold">Izin.<span class="text-accent">In</span></h4>
+    <footer class="bg-secondary text-white pt-16 pb-8">
+        <div class="container mx-auto px-4">
+          <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Izin.In</h4>
+              <p class="text-gray-300 mb-4">Platform resmi untuk memudahkan perizinan UMKM di Indonesia dengan pelayanan cepat dan transparan.</p>
+              <div class="flex space-x-4">
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-facebook text-xl"></i>
+                </a>
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-twitter text-xl"></i>
+                </a>
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-instagram text-xl"></i>
+                </a>
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-youtube text-xl"></i>
+                </a>
+              </div>
             </div>
-            <p class="text-gray-300 mb-4 text-sm">Platform resmi untuk memudahkan perizinan UMKM di Indonesia.</p>
-            <div class="flex space-x-4">
-              <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300 text-lg">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300 text-lg">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300 text-lg">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#" class="text-gray-300 hover:text-white transition-colors duration-300 text-lg">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Layanan</h4>
+              <ul class="space-y-2">
+                <li><a href="#" class="text-gray-300 hover:text-white">Izin Usaha UMKM</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Izin Usaha Kuliner</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Izin Usaha Manufaktur</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Perpanjangan Izin Usaha</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Cek Status Perizinan</a></li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Tautan</h4>
+              <ul class="space-y-2">
+                <li><a href="/" class="text-gray-300 hover:text-white">Beranda</a></li>
+                <li><a href="/tentang.html" class="text-gray-300 hover:text-white">Tentang Kami</a></li>
+                <li><a href="/berita.html" class="text-gray-300 hover:text-white">Berita</a></li>
+                <li><a href="/pengaduan.html" class="text-gray-300 hover:text-white">Pengaduan</a></li>
+                <li><a href="/kontak.html" class="text-gray-300 hover:text-white">Kontak</a></li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Kontak</h4>
+              <ul class="space-y-3 text-gray-300">
+                <li class="flex items-start">
+                  <i class="fas fa-map-marker-alt mt-1 mr-3"></i>
+                  <span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span>
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-phone-alt mr-3"></i>
+                  <span>+62 856-4178-3101</span>
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-envelope mr-3"></i>
+                  <span>naufalhhdd@gmail.com</span>
+                </li>
+                <li class="flex items-center">
+                  <i class="fab fa-whatsapp mr-3"></i>
+                  <span>+62 856-4178-3101</span>
+                </li>
+              </ul>
             </div>
           </div>
-          <div>
-            <h4 class="text-lg font-semibold mb-4 flex items-center"><i class="fas fa-link mr-2 text-accent"></i> Link Cepat</h4>
-            <ul class="space-y-2">
-              <li>
-                <a href="/layanan.html" class="text-gray-300 hover:text-white transition-colors duration-300 flex items-center text-sm"> <i class="fas fa-chevron-right text-xs mr-2 text-accent"></i> Layanan </a>
-              </li>
-              <li>
-                <a href="/berita.html" class="text-gray-300 hover:text-white transition-colors duration-300 flex items-center text-sm"> <i class="fas fa-chevron-right text-xs mr-2 text-accent"></i> Berita </a>
-              </li>
-              <li>
-                <a href="/pengaduan.html" class="text-gray-300 hover:text-white transition-colors duration-300 flex items-center text-sm"> <i class="fas fa-chevron-right text-xs mr-2 text-accent"></i> Pengaduan </a>
-              </li>
-              <li>
-                <a href="/faq.html" class="text-gray-300 hover:text-white transition-colors duration-300 flex items-center text-sm"> <i class="fas fa-chevron-right text-xs mr-2 text-accent"></i> FAQ </a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-lg font-semibold mb-4 flex items-center"><i class="fas fa-envelope mr-2 text-accent"></i> Kontak Kami</h4>
-            <ul class="space-y-3 text-gray-300 text-sm">
-              <li class="flex items-start">
-                <i class="fas fa-map-marker-alt mt-1 mr-3 text-accent"></i>
-                <span>Jl. Contoh No. 123, Jakarta Pusat, DKI Jakarta</span>
-              </li>
-              <li class="flex items-start">
-                <i class="fas fa-phone-alt mt-1 mr-3 text-accent"></i>
-                <span>(021) 1234567</span>
-              </li>
-              <li class="flex items-start">
-                <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
-                <span>info@izin.in.go.id</span>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-lg font-semibold mb-4 flex items-center"><i class="fas fa-newspaper mr-2 text-accent"></i> Newsletter</h4>
-            <p class="text-gray-300 mb-4 text-sm">Berlangganan newsletter untuk mendapatkan update terbaru.</p>
-            <form class="flex">
-              <input type="email" placeholder="Email Anda" class="px-3 py-2 rounded-l-lg focus:outline-none text-gray-800 w-full text-sm" />
-              <button type="submit" class="bg-accent hover:bg-amber-600 px-3 py-2 rounded-r-lg transition-colors duration-300 text-sm">
-                <i class="fas fa-paper-plane"></i>
-              </button>
-            </form>
+          <div class="mt-12 pt-8 border-t border-gray-700 text-center text-gray-400">
+            <p>&copy; 2025 Izin.In. Hak Cipta Dilind ungi.</p>
+            <div class="mt-2 flex justify-center space-x-6 text-sm">
+              <a href="#" class="hover:text-white">Kebijakan Privasi</a>
+              <a href="#" class="hover:text-white">Syarat & Ketentuan</a>
+              <a href="#" class="hover:text-white">Peta Situs</a>
+            </div>
           </div>
         </div>
-        <div class="border-t border-gray-700 pt-6 text-center text-gray-300 text-sm">
-          <p>&copy; 2025 <span class="text-accent">Izin.In</span>. Hak Cipta Dilindungi.</p>
-        </div>
-      </div>
-    </footer>
+      </footer>
 
     <!-- Back to Top Button -->
     <button id="back-to-top" class="fixed bottom-6 right-6 bg-primary text-white p-3 rounded-full shadow-lg opacity-0 invisible transition-all duration-300 hover:bg-primary-dark">
