--- a/index.html
+++ b/index.html
@@ -435,19 +435,19 @@
             <ul class="space-y-3 text-gray-300">
               <li class="flex items-start">
                 <i class="fas fa-map-marker-alt mt-1 mr-3"></i>
-                <span>Jl. Perizinan No. 123, Jakarta Pusat 10110</span>
+                <span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span>
               </li>
               <li class="flex items-center">
                 <i class="fas fa-phone-alt mr-3"></i>
-                <span>(021) 1234-5678</span>
+                <span>+62 856-4178-3101</span>
               </li>
               <li class="flex items-center">
                 <i class="fas fa-envelope mr-3"></i>
-                <span>info@izin-in.go.id</span>
+                <span>naufalhhdd@gmail.com</span>
               </li>
               <li class="flex items-center">
                 <i class="fab fa-whatsapp mr-3"></i>
-                <span>+62 812 3456 7890</span>
+                <span>+62 856-4178-3101</span>
               </li>
             </ul>
           </div>
