--- a/terima-kasih.html
+++ b/terima-kasih.html
@@ -78,58 +78,79 @@
     </main>
 
     <!-- Footer (same as other pages) -->
-    <footer class="bg-secondary text-white">
-        <div class="container mx-auto px-4 py-12">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <h4 class="text-lg font-semibold mb-4">Tentang Kami</h4>
-                    <p class="text-gray-300">Platform resmi untuk memudahkan perizinan UMKM di Indonesia.</p>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-4">Link Cepat</h4>
-                    <ul class="space-y-2">
-                        <li><a href="/layanan.html" class="text-gray-300 hover:text-white">Layanan</a></li>
-                        <li><a href="/berita.html" class="text-gray-300 hover:text-white">Berita</a></li>
-                        <li><a href="/pengaduan.html" class="text-gray-300 hover:text-white">Pengaduan</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-4">Kontak</h4>
-                    <ul class="space-y-2 text-gray-300">
-                        <li>Jl. Contoh No. 123</li>
-                        <li>Telp: (021) 1234567</li>
-                        <li>Email: info@instansi.go.id</li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-4">Media Sosial</h4>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-300 hover:text-white">
-                            <span class="sr-only">Facebook</span>
-                            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                            </svg>
-                        </a>
-                        <a href="#" class="text-gray-300 hover:text-white">
-                            <span class="sr-only">Twitter</span>
-                            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                            </svg>
-                        </a>
-                        <a href="#" class="text-gray-300 hover:text-white">
-                            <span class="sr-only">Instagram</span>
-                            <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
+    <footer class="bg-secondary text-white pt-16 pb-8">
+        <div class="container mx-auto px-4">
+          <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Izin.In</h4>
+              <p class="text-gray-300 mb-4">Platform resmi untuk memudahkan perizinan UMKM di Indonesia dengan pelayanan cepat dan transparan.</p>
+              <div class="flex space-x-4">
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-facebook text-xl"></i>
+                </a>
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-twitter text-xl"></i>
+                </a>
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-instagram text-xl"></i>
+                </a>
+                <a href="#" class="text-gray-300 hover:text-white">
+                  <i class="fab fa-youtube text-xl"></i>
+                </a>
+              </div>
             </div>
-            <div class="mt-8 pt-8 border-t border-gray-700 text-center text-gray-300">
-                <p>&copy; 2025 Izin.In. Hak Cipta Dilindungi.</p>
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Layanan</h4>
+              <ul class="space-y-2">
+                <li><a href="#" class="text-gray-300 hover:text-white">Izin Usaha UMKM</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Izin Usaha Kuliner</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Izin Usaha Manufaktur</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Perpanjangan Izin Usaha</a></li>
+                <li><a href="#" class="text-gray-300 hover:text-white">Cek Status Perizinan</a></li>
+              </ul>
             </div>
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Tautan</h4>
+              <ul class="space-y-2">
+                <li><a href="/" class="text-gray-300 hover:text-white">Beranda</a></li>
+                <li><a href="/tentang.html" class="text-gray-300 hover:text-white">Tentang Kami</a></li>
+                <li><a href="/berita.html" class="text-gray-300 hover:text-white">Berita</a></li>
+                <li><a href="/pengaduan.html" class="text-gray-300 hover:text-white">Pengaduan</a></li>
+                <li><a href="/kontak.html" class="text-gray-300 hover:text-white">Kontak</a></li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-lg font-semibold mb-4">Kontak</h4>
+              <ul class="space-y-3 text-gray-300">
+                <li class="flex items-start">
+                  <i class="fas fa-map-marker-alt mt-1 mr-3"></i>
+                  <span>Tambak, Berjo, Kec. Ngargoyoso, Kab. Karanganyar 57793 Karanganyar Central Java</span>
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-phone-alt mr-3"></i>
+                  <span>+62 856-4178-3101</span>
+                </li>
+                <li class="flex items-center">
+                  <i class="fas fa-envelope mr-3"></i>
+                  <span>naufalhhdd@gmail.com</span>
+                </li>
+                <li class="flex items-center">
+                  <i class="fab fa-whatsapp mr-3"></i>
+                  <span>+62 856-4178-3101</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="mt-12 pt-8 border-t border-gray-700 text-center text-gray-400">
+            <p>&copy; 2025 Izin.In. Hak Cipta Dilind ungi.</p>
+            <div class="mt-2 flex justify-center space-x-6 text-sm">
+              <a href="#" class="hover:text-white">Kebijakan Privasi</a>
+              <a href="#" class="hover:text-white">Syarat & Ketentuan</a>
+              <a href="#" class="hover:text-white">Peta Situs</a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
     <script>
         // Toggle mobile menu
